crates/toml_edit/tests/fixtures/invalid/control/rawmulti-cr.stderr
TOML parse error at line 1, column 24
  |
1 | rawmulti-cr   = '''null
'''
  |                        ^
invalid multiline literal string
